bigdata-zsl/bigdata-zsl-core/g4/Expr.g4
grammar Expr;
import CommonLexerRules;
prog:   stat+;
stat:   expr NEWLINE
    |   ID '=' expr NEWLINE
    |   NEWLINE
    ;
expr:   expr ('*'|'/') expr
    |   expr ('+'|'-') expr
    |   ID
    |   INT
    |   '(' expr ')'
    ;
